samples/_failures_safe/1761209707_228a29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abe66521.c: In function ‘main’:
./samples/SAFE/__tmp_abe66521.c:153:16: error: missing terminating " character
  153 |         printf("2. Multiply matrices
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_abe66521.c:153:9: error: expected expression at end of input
  153 |         printf("2. Multiply matrices
      |         ^~~~~~
./samples/SAFE/__tmp_abe66521.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_abe66521.c:153:9: error: expected declaration or statement at end of input
